✅ Fix TypeScript compilation errors and production build issues

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,20 @@
 # Format: postgresql://username:password@localhost:5432/database_name
 DATABASE_URL="postgresql://postgres:password@localhost:5432/mindscope_db"
 
+# AI Configuration
+# Get your Groq API key from: https://console.groq.com
+GROQ_API_KEY="your-groq-api-key-here"
+
 # JWT Secret for Authentication (Generate a strong secret in production)
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 JWT_EXPIRES_IN="7d"
 
 # Password Hashing
 BCRYPT_ROUNDS=12
+
+# NextAuth Configuration
+NEXTAUTH_SECRET="your-nextauth-secret-key-change-this-in-production"
+NEXTAUTH_URL="http://localhost:3000"
 
 # Email Configuration (for verification and notifications)
 SMTP_HOST="smtp.gmail.com"
