--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "set NEXT_TELEMETRY_DISABLED=1&& next dev",
     "build": "set NEXT_TELEMETRY_DISABLED=1&& next build",
     "start": "set NEXT_TELEMETRY_DISABLED=1&& next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@prisma/client": "^5.7.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.1",
@@ -21,6 +23,7 @@
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.1",
@@ -28,21 +31,27 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.13.1",
     "groq-sdk": "^0.32.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.468.0",
     "next": "15.4.6",
+    "prisma": "^5.7.1",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "^0.170.0",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "15.4.6",
